tenzir/integration/data/reference/pipelines_local/test_print_multiple_events/step_01.ref
error: field c is not of type record
 --> <input>:1:145
  |
1 | from /Users/balavinaithirthan/tenzirCopies/tenzirNoPlugCopy/tenzir/integration/data/inputs/json/nested-object.json read json | repeat 2 | print a.b.c json
  |                                                                                                                                                 ^^^^^ 
  |